update index and README

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </tr>
         <tr>
           <td><h3>1971</h3></td>
-          <td>Doctorado honoris causa de la Universidad de Columbia en Nueva York</td>
+          <td>Doctorado honoris causa de la Universidad de Columbia en Nueva london</td>
         </tr>
         <tr>
           <td><h3>1961</h3></td>
